# Blender-Addon-Photogrammetry-Importer

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  create_blender_addon_zip.bat  create_blender_addon_zip.sh  import_nvm_op.py  pyproject.toml  reformat_code.sh
doc/: requirements.txt
doc/markdown/: adjustment.md  alignment.md  changelog.md  contribution.md  example.md  export.md  import.md  installation.md  point_cloud.md  python.md  representation.md  troubleshooting.md  usage.md
doc/sphinx/: Makefile
example_view_synthesis_scripts/: instant_ngp.py
examples/: Example.asc  Example.ply  Example_colors.ply  OpenSfM_example_meshed.json  VisualSFM_example.nvm  meshroom.baf  meshroom2023_cameras.sfm  meshroom_example.baf  open3d_example.json
examples/colmap_example_model_not_shared_txt/: cameras.txt  images.txt  points3D.txt
examples/colmap_example_model_txt/: cameras.txt  images.txt  points3D.txt
examples/colmap_example_model_txt_missing_cams_and_subfolders/: cameras.txt  images.txt  points3D.txt
examples/images/: Readme.txt
nvm_import/: __init__.py  camera.py  export_nvm_op.py  import_nvm_op.py  nvm_file_handler.py  stop_watch.py
nvm_import_addon/: __init__.py  import_nvm_op.py  nvm_file_handler.py
nvm_import_export/: __init__.py  camera.py  export_nvm_op.py  import_nvm_op.py  nvm_file_handler.py  point.py
photogrammetry_importer/: __init__.py  blender_camera_utils.py  blender_logging.py  blender_point_utils.py  blender_utils.py  camera.py  camera_import_properties.py  initialization.py  measurement.py  mesh_import_properties.py  photogrammetry_export_op.py  photogrammetry_import_op.py  point.py  point_import_properties.py  registration.py  stop_watch.py
tests/: conftest.py  test_validation.py
(+134 files in other folders)
